Figured out how to get roles working with @Secured by using ROLE_ prefix (which turns out is required).  Also moved some stuff around to start thinking about how I would separate out a com.msi.cc911.auth library.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 name: cc911-example-app-service
 logging:
     level:
-        root: WARN
+        root: DEBUG
         com.msi.cc911: TRACE
 security:
     oauth2:
