Added AccessTokenVerifier.enrichBearerToken to query CCAdmin /me info for user.  Still work in progress.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,3 +17,6 @@ security:
 
         resource:
             userInfoUri: https://idmmaster.imw.motorolasolutions.com/idp/userinfo.openid
+
+        commandcentral:
+            userInfoUri: https://api.master.commandcentral.com/api/admin/me
